first LP running

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,35 +2,102 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b5e2ae15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.power import *"
+    "from power import *\n",
+    "from power.systems import System3Bus\n",
+    "from power.systems import IEEE14\n",
+    "import pulp as pl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "541b56a0",
+   "execution_count": 2,
+   "id": "1e32dbeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b3 = System3Bus()\n",
+    "b14 = IEEE14()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d460fba6",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'power'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msrc\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01msystems\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mb3\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m System3Bus\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\gabriel.halfeld\\GitHub\\tastee-aula-2\\src\\systems\\b3.py:1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpower\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m Network, Bus, Line, Generator, Load\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mclass\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mSystem3Bus\u001b[39;00m(Network):\n\u001b[32m      3\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[33;03m    Classe para representar o sistema de 3 barras fornecido.\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n",
-      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'power'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Custo objetivo (PU): 10000.0\n",
+      "Carga total (pu): 0.1\n",
+      "Gen 1 @ bus 1: p = 0.100000 pu -> 10.00 MW (limites [0.000000,0.150000])\n",
+      "Gen 2 @ bus 2: p = 0.000000 pu -> 0.00 MW (limites [0.000000,0.150000])\n",
+      "Gen 3 @ bus 3: p = 0.000000 pu -> 0.00 MW (limites [0.000000,0.150000])\n",
+      "Gen 1001 @ bus 1: p = 0.000000 pu -> 0.00 MW (limites [0.000000,999.990000])\n",
+      "Gen 1002 @ bus 2: p = 0.000000 pu -> 0.00 MW (limites [0.000000,999.990000])\n",
+      "Gen 1003 @ bus 3: p = 0.000000 pu -> 0.00 MW (limites [0.000000,999.990000])\n",
+      "Soma da geração (pu): 0.1\n"
      ]
     }
    ],
    "source": [
-    "from src.systems.b3 import System3Bus"
+    "# Variáveis e formulação do despacho econômico (linear) usando PuLP\n",
+    "# Escolha a rede a ser despachada: trocar para b3 se preferir o sistema 3-barras\n",
+    "net = b3\n",
+    "generators = net.generators\n",
+    "\n",
+    "# (Re)cria o problema como minimização do custo linear\n",
+    "problema = pl.LpProblem(\"Despacho_Economico_Linear\", pl.LpMinimize)\n",
+    "\n",
+    "# Variáveis de decisão: potência ativa por gerador em pu\n",
+    "p_gen = {g.id: pl.LpVariable(f\"p_g_{g.id}\", lowBound=g.p_min, upBound=g.p_max) for g in generators}\n",
+    "\n",
+    "# Objetivo: soma dos custos lineares (usa g.cost_b já escalado pelo pb nas propriedades do modelo)\n",
+    "problema += pl.lpSum([g.cost_b * p_gen[g.id] for g in generators]), \"Custo_Total\"\n",
+    "\n",
+    "# Restrição de balanço de potência: geração total = carga total (em pu)\n",
+    "total_load = sum([ld.p for ld in net.loads])\n",
+    "problema += pl.lpSum([p_gen[g.id] for g in generators]) == total_load, \"Balanceamento_Potencia\"\n",
+    "\n",
+    "# Resolver o problema e imprimir resultados\n",
+    "resultado = problema.solve()\n",
+    "print(\"Status:\", pl.LpStatus[problema.status])\n",
+    "print(\"Custo objetivo (PU):\", pl.value(problema.objective))\n",
+    "print(\"Carga total (pu):\", total_load)\n",
+    "\n",
+    "# Atualizar os objetos gerador com as decisões e mostrar um resumo (primeiros 30 geradores para não poluir)\n",
+    "for g in generators:\n",
+    "    pg = p_gen[g.id].value()\n",
+    "    print(f\"Gen {g.id} @ bus {g.bus.id}: p = {pg:.6f} pu -> {pg * g.pb:.2f} MW (limites [{g.p_min:.6f},{g.p_max:.6f}])\")\n",
+    "    # escrever de volta no modelo (opcional) em MW: g.p_input = pg * g.pb\n",
+    "\n",
+    "# Total geração calculada (sanity-check)\n",
+    "print(\"Soma da geração (pu):\", sum(p_gen[g.id].value() for g in generators))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "272a3ef1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Generator(id=1, bus=1, p=0.000, q=0.000, p_range=[0.000,0.150], q_range=[-999.99,999.99]),, Generator(id=2, bus=2, p=0.000, q=0.000, p_range=[0.000,0.150], q_range=[-999.99,999.99]),, Generator(id=3, bus=3, p=0.000, q=0.000, p_range=[0.000,0.150], q_range=[-999.99,999.99]),, Generator(id=1001, bus=1, p=0.000, q=0.000, p_range=[0.000,999.990], q_range=[-999.99,999.99]),, Generator(id=1002, bus=2, p=0.000, q=0.000, p_range=[0.000,999.990], q_range=[-999.99,999.99]),, Generator(id=1003, bus=3, p=0.000, q=0.000, p_range=[0.000,999.990], q_range=[-999.99,999.99]),]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(b3.generators)"
    ]
   }
  ],
