--- a/main.ipynb
+++ b/main.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "329955b4",
    "metadata": {},
    "outputs": [],
@@ -46,10 +46,10 @@
     "    # --- Extração das Variáveis Primais ---\n",
     "    try:\n",
     "        primal_results = {\n",
-    "            'geracao_MW': {gen.id: f\"{gen.p_var.value():.4f}\" for gen in net.generators},\n",
+    "            'geracao_pu': {gen.id: f\"{gen.p_var.value():.4f}\" for gen in net.generators},\n",
     "            'thetas_deg': {bus.id: f\"{np.rad2deg(bus.theta_var.value()):.4f}\" for bus in net.buses},\n",
     "            # Nota: usei 'flow_var'. Se o seu for 'flux_var', ajuste aqui.\n",
-    "            'fluxo_MW': {line.id: f\"{line.flow_var.value():.4f}\" for line in net.lines}\n",
+    "            'fluxo_pu': {line.id: f\"{line.flow_var.value():.4f}\" for line in net.lines}\n",
     "        }\n",
     "    except AttributeError as e:\n",
     "        print(f\"[ERRO] Falha ao extrair variáveis primais. Verifique os nomes dos atributos (ex: p_var, theta_var): {e}\")\n",
@@ -67,12 +67,12 @@
     "    dual_results = {\n",
     "        'custo_marginal_de_energia_LMP': {\n",
     "            # O LMP é o dual da restrição de balanço nodal (com sinal trocado)\n",
-    "            bus.id: f\"${get_dual(f'B{bus.id}_Power_Balance'):.2f}/MWh\"\n",
+    "            bus.name: f\"${get_dual(f'B{bus.id}_Power_Balance'):.2f}/MWh\"\n",
     "            for bus in net.buses\n",
     "        },\n",
     "        'congestionamento_de_fluxo': {\n",
     "            # Duals das restrições de limite de fluxo\n",
-    "            line.id: {\n",
+    "            line.name: {\n",
     "                # Para restrições <=, o lambda é -pi\n",
     "                'limite_superior': get_dual(f'Constraint_Flow_{line.id}_Upper', multiplier=-1),\n",
     "                # Para restrições >=, o lambda é pi\n",
@@ -81,7 +81,7 @@
     "            for line in net.lines\n",
     "        },\n",
     "        'limites_de_geracao': {\n",
-    "            gen.id: {\n",
+    "            gen.name: {\n",
     "                'limite_superior': get_dual(f'Constraint_P{gen.id}_Upper', multiplier=-1),\n",
     "                'limite_inferior': get_dual(f'Constraint_P{gen.id}_Lower')\n",
     "            }\n",
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "aa893b3a",
    "metadata": {},
    "outputs": [],
@@ -236,12 +236,10 @@
     "            l.to_bus.loss += line_loss / 2\n",
     "            \n",
     "        return current_total_loss\n",
-    "\n",
-    "    \n",
     "    \n",
     "    # ----------------------------------------------------------------SOLVING----------------------------------------------------------------------------------------------#\n",
     "    \n",
-    "    def solve_linear(self, iter_max=100, max_tol=1e-4, min_losses=False):\n",
+    "    def solve_loss(self, iter_max=100, max_tol=1e-4, min_losses=False):\n",
     "        \"\"\"\n",
     "        Resolve o despacho econômico de forma iterativa para incluir as perdas da rede.\n",
     "        \"\"\"\n",
@@ -289,12 +287,12 @@
     "\n",
     "        final_cost = pl.value(self.problem.objective)\n",
     "        \n",
-    "        return (pl.LpStatus[self.problem.status], final_cost, current_total_loss)"
+    "        return (pl.LpStatus[self.problem.status], final_cost, current_total_loss)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "7c3c0bcf",
    "metadata": {},
    "outputs": [
@@ -303,8 +301,8 @@
      "output_type": "stream",
      "text": [
       "Iniciando Despacho Econômico Linear com Perdas...\n",
-      "Iteração 1: Perdas Totais = 0.003874 pu | Diferença = 0.003874\n",
-      "Iteração 2: Perdas Totais = 0.003899 pu | Diferença = 0.000025\n",
+      "Iteração 1: Perdas Totais = 0.000415 pu | Diferença = 0.000415\n",
+      "Iteração 2: Perdas Totais = 0.000416 pu | Diferença = 0.000001\n",
       "\n",
       "Convergência atingida na iteração 2!\n",
       "\n",
@@ -313,10 +311,9 @@
     }
    ],
    "source": [
-    "#Supondo que seu código principal seja assim:\n",
-    "net = B6L8()\n",
+    "net = System3Bus()\n",
     "solver = LinearDispatch3(net)\n",
-    "status, cost, loss = solver.solve_linear()\n",
+    "status, cost, loss = solver.solve_loss(min_losses=True)\n",
     "\n",
     "# Agora, em vez de ter toda a lógica de extração aqui, você apenas chama a função:\n",
     "if status == 'Optimal':\n",
