--- a/main.ipynb
+++ b/main.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 51,
    "id": "aa893b3a",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,8 @@
     "        self.problem += pl.lpSum([g.p_var for g in self.net.generators]), \"Min_Loss\"\n",
     "    \n",
     "    def _fob_transmission_cost(self):\n",
-    "        self.problem += pl.lpSum([l.cost * l.flow_var for l in self.net.lines]), \"Min_Transmission_Cost\"\n",
+    "        self._update_flow_sign()\n",
+    "        self.problem += pl.lpSum([l.flow_sign * l.flow_max_pu * l.flow_var for l in self.net.lines]), \"Min_Transmission_Cost\"\n",
     "\n",
     "    # ----------------------------------------------------------------CREATE VARIABLES------------------------------------------------------------------------------------#\n",
     "    def _create_theta_variable(self):\n",
@@ -236,6 +237,19 @@
     "            l.to_bus.loss += line_loss / 2\n",
     "            \n",
     "        return current_total_loss\n",
+    "\n",
+    "    def _update_flow_sign(self):\n",
+    "        for line in self.net.lines:\n",
+    "            if line.from_bus.theta_var.value() > line.to_bus.theta_var.value(): # Fluxo de \"FROM\" para \"TO\"\n",
+    "                line.flow_sign = 1\n",
+    "            elif line.from_bus.theta_var.value() < line.to_bus.theta_var.value(): #Fluxo de \"TO\" para \"FROM\"\n",
+    "                line.flow_sign = -1\n",
+    "            elif line.from_bus.theta_var.value() == line.to_bus.theta_var.value(): #Fluxo 0\n",
+    "                line.flow_sign = 0\n",
+    "            else:\n",
+    "                raise ValueError(f\"Fluxo não foi corretamente calculado, o sentido do fluxo não é negativo, nem positivo, nem zero\")\n",
+    "    \n",
+    "\n",
     "    \n",
     "    # ----------------------------------------------------------------SOLVING----------------------------------------------------------------------------------------------#\n",
     "    \n",
@@ -287,7 +301,84 @@
     "\n",
     "        final_cost = pl.value(self.problem.objective)\n",
     "        \n",
-    "        return (pl.LpStatus[self.problem.status], final_cost, current_total_loss)\n"
+    "        return (pl.LpStatus[self.problem.status], final_cost, current_total_loss)\n",
+    "    \n",
+    "    def solve_transmission(self):\n",
+    "        \"\"\"\n",
+    "        Otimização de Custo de Transmissão com injeções de potência fixas.\n",
+    "        Objetivo: Obter os coeficientes de Lagrange (preços-sombra) das restrições.\n",
+    "        \"\"\"\n",
+    "        print(\"\\n\" + \"=\"*80)\n",
+    "        print(\"OTIMIZAÇÃO DE CUSTO DE TRANSMISSÃO\")\n",
+    "        print(\"=\"*80)\n",
+    "\n",
+    "        #1) Resolvendo o Problema com Perdas\n",
+    "        print(\"Passo 1: Resolvendo o Despacho Econômico com Perdas para fixar a geração...\")\n",
+    "        status, _, _ = self.solve_loss()\n",
+    "        \n",
+    "        if status != 'Optimal':\n",
+    "            print(\"[ERRO] O despacho econômico inicial falhou. Abortando a otimização de transmissão.\")\n",
+    "            return None, None     \n",
+    "        \n",
+    "        #2) Construir o Problema de Custo de Transmissão\n",
+    "        self.problem = pl.LpProblem(\"Transmission_Cost_Optimization\", pl.LpMinimize)\n",
+    "        self._create_theta_variable()\n",
+    "        self._create_flow_variable()\n",
+    "        # 3. Balanço nodal COM VALORES FIXOS\n",
+    "        for b in self.net.buses:\n",
+    "            generation = sum([g.p_var.value() for g in b.generators])\n",
+    "            demand = sum([l.p for l in b.loads]) + b.loss\n",
+    "            flow_out = pl.lpSum([l.flow_var for l in self.net.lines if l.from_bus == b])\n",
+    "            flow_in = pl.lpSum([l.flow_var for l in self.net.lines if l.to_bus == b])\n",
+    "            \n",
+    "            self.problem += flow_in - flow_out == demand - generation\n",
+    "\n",
+    "        self._fob_transmission_cost()\n",
+    "        self.problem.solve()\n",
+    "\n",
+    "        return extract_and_save_results(self.problem, self.net, \"resultados_transmissao.json\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "82173f6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "================================================================================\n",
+      "OTIMIZAÇÃO DE CUSTO DE TRANSMISSÃO\n",
+      "================================================================================\n",
+      "Passo 1: Resolvendo o Despacho Econômico com Perdas para fixar a geração...\n",
+      "Iniciando Despacho Econômico Linear com Perdas...\n",
+      "Iteração 1: Perdas Totais = 0.003874 pu | Diferença = 0.003874\n",
+      "Iteração 2: Perdas Totais = 0.003899 pu | Diferença = 0.000025\n",
+      "\n",
+      "Convergência atingida na iteração 2!\n",
+      "\n",
+      "[AVISO] A solução não é ótima (Infeasible). Nenhum resultado será extraído.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, None)"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "net = B6L8()\n",
+    "solver = LinearDispatch3(net)\n",
+    "solver.solve_transmission()"
    ]
   },
   {
