--- a/debug.ipynb
+++ b/debug.ipynb
@@ -1,13 +1,78 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36a50fdb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from power import Battery, Network, Bus\n",
+    "from power "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "98c0c572",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Battery(bus=Bus(id=1, name='Bus_1', btype=PQ, v=1.000 pu, theta=0.000 deg, p_net=0.000 pu, q_net=0.000 pu, y_sh=0.00+0.00j pu, gens=1, loads=0), id=1, name='Battery_1', p_mw=0.0, q_mvar=0.0, p_max_mw=100, p_min_mw=-100, q_max_mvar=99999, q_min_mvar=0.0, capacity_mwh=1000, soc_mwh=500, efficiency_charge=0.95, efficiency_discharge=0.95, cost_charge_mw=0.0, cost_discharge_mw=0.0)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Teste para ver se consigo mudar o valor de capacidade de uma bateria\n",
+    "net = Network(sb_mva=100)\n",
+    "bus = Bus(id=1, network=net)\n",
+    "batt = Battery(id=1, bus=bus, p_max_mw=100, p_min_mw=-100, capacity_mwh=1000, soc_mwh=500)\n",
+    "\n",
+    "print(net.batteries)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "74e1e1b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trabalhos_transmissao.utils.load_scen import apply_load_scen\n",
+    "from trabalhos_transmissao.utils.wnd_scen import apply_wnd_scen\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28311dd2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loads = {}\n",
+    "for i in range(24):"
+   ]
+  }
+ ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tastee-aula-2-U9XskkfK-py3.12",
+   "display_name": "tastee-aula-2-Kog78Irf-py3.12",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
