loop de scale de bateria iniciado e local de bateria selecionado

--- a/trabalhos_transmissao/trab_aula_8/defining_wnd_and_loads.ipynb
+++ b/trabalhos_transmissao/trab_aula_8/defining_wnd_and_loads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "11558536",
    "metadata": {},
    "outputs": [],
@@ -10,281 +10,178 @@
     "from trabalhos_transmissao.utils.load_scen import apply_load_scen\n",
     "from trabalhos_transmissao.utils.wnd_scen import apply_wnd_scen\n",
     "from power.systems import *\n",
-    "from optimal_power_flow.linear_opf.opf_loss import LinearDispatch"
+    "from optimal_power_flow.linear_opf.opf_loss import LinearDispatch\n",
+    "from power import Network, Bus, Load, Battery\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c595d047",
+   "metadata": {},
+   "source": [
+    "# Sistemas analisados:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9777f7c8",
+   "metadata": {},
+   "source": [
+    "## Sistema B6L8"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "ce32300c",
+   "execution_count": 37,
+   "id": "956bd058",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solução encontrada após 5 iterações.\n",
-      "Perdas Totais do Sistema: 71.1602 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 319.5482 MW\n"
+      "Maior LMP: barra Bus_5 (id=5) = 40000.0000\n",
+      "Menor LMP: barra Bus_1 (id=1) = 0.0000\n"
      ]
-    },
-    {
-     "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Total_Cost_System",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Total_Losses_MW",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Total_Curtailment_MW",
-         "rawType": "float64",
-         "type": "float"
-        },
-        {
-         "name": "Total_Shed_MW",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "ref": "933c7d8d-0d26-4e62-b312-3fadfd3a9c24",
-       "rows": [
-        [
-         "0",
-         "293755.37536",
-         "71.16022445240951",
-         "0.0",
-         "319.548158"
-        ]
-       ],
-       "shape": {
-        "columns": 4,
-        "rows": 1
-       }
-      },
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total_Cost_System</th>\n",
-       "      <th>Total_Losses_MW</th>\n",
-       "      <th>Total_Curtailment_MW</th>\n",
-       "      <th>Total_Shed_MW</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>293755.37536</td>\n",
-       "      <td>71.160224</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>319.548158</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Total_Cost_System  Total_Losses_MW  Total_Curtailment_MW  Total_Shed_MW\n",
-       "0       293755.37536        71.160224                   0.0     319.548158"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "net = IEEE118EOL()\n",
-    "solver = LinearDispatch(net)\n",
+    "b6 = B6L8Charged()\n",
+    "solver = LinearDispatch(b6)\n",
+    "results = solver.solve_loss()\n",
+    "bus_df = results[\"Bus\"]  # DataFrame com índice = nome da barra\n",
+    "lmp_series = bus_df[\"Local_Marginal_Price\"]\n",
     "\n",
-    "results = solver.solve_loss(verbose=True)\n",
-    "results[\"Resumo\"]"
+    "# Nome (string) da barra com maior e menor LMP\n",
+    "bus_name_max = lmp_series.idxmax()\n",
+    "bus_name_min = lmp_series.idxmin()\n",
+    "\n",
+    "# Valores de LMP\n",
+    "lmp_max = lmp_series.loc[bus_name_max]\n",
+    "lmp_min = lmp_series.loc[bus_name_min]\n",
+    "\n",
+    "# Criar dicionário nome -> id\n",
+    "name_to_id = {b.name: b.id for b in b6.buses}\n",
+    "\n",
+    "b6_id_max = name_to_id[bus_name_max]\n",
+    "b6_id_min = name_to_id[bus_name_min]\n",
+    "\n",
+    "print(f\"Maior LMP: barra {bus_name_max} (id={b6_id_max}) = {lmp_max:.4f}\")\n",
+    "print(f\"Menor LMP: barra {bus_name_min} (id={b6_id_min}) = {lmp_min:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77969d13",
+   "metadata": {},
+   "source": [
+    "## Sistema IEEE118"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7a2817ed",
+   "execution_count": 36,
+   "id": "c078d0c7",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solução encontrada após 5 iterações.\n",
-      "Perdas Totais do Sistema: 71.3446 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 315.3124 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 71.4990 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 310.8633 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 71.6571 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 306.0994 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 71.8705 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 300.8624 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 72.1526 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 295.1055 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 72.1251 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 288.7084 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 72.0568 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 281.8297 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 71.9455 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 274.4307 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 71.7838 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 266.2997 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 71.4494 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 258.9680 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 70.9596 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 253.5007 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 70.4890 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 247.4871 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 70.0529 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 240.8729 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 69.6704 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 233.5981 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 69.2034 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 225.5969 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 68.6925 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 216.7992 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 68.2504 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 207.1251 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 67.5390 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 196.9237 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 67.2921 MW\n",
-      "Curtailment Total: 0.0000 MW\n",
-      "Shed Total: 186.0084 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 66.9943 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 174.3213 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 64.6461 MW\n",
-      "Curtailment Total: -0.0000 MW\n",
-      "Shed Total: 163.6490 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.3088 MW\n",
-      "Curtailment Total: 5.1229 MW\n",
-      "Shed Total: 151.4774 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 64.0016 MW\n",
-      "Curtailment Total: 41.5239 MW\n",
-      "Shed Total: 134.4911 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.3427 MW\n",
-      "Curtailment Total: 87.9510 MW\n",
-      "Shed Total: 119.4169 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.0340 MW\n",
-      "Curtailment Total: 139.9693 MW\n",
-      "Shed Total: 103.2771 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 63.3350 MW\n",
-      "Curtailment Total: 199.5623 MW\n",
-      "Shed Total: 88.4756 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.5172 MW\n",
-      "Curtailment Total: 283.4180 MW\n",
-      "Shed Total: 72.2820 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.7588 MW\n",
-      "Curtailment Total: 381.6189 MW\n",
-      "Shed Total: 54.5746 MW\n",
-      "Solução encontrada após 3 iterações.\n",
-      "Perdas Totais do Sistema: 64.3411 MW\n",
-      "Curtailment Total: 524.0976 MW\n",
-      "Shed Total: 35.2231 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.4468 MW\n",
-      "Curtailment Total: 692.6341 MW\n",
-      "Shed Total: 15.8753 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 63.5468 MW\n",
-      "Curtailment Total: 863.2106 MW\n",
-      "Shed Total: 0.0000 MW\n",
-      "Solução encontrada após 4 iterações.\n",
-      "Perdas Totais do Sistema: 62.9424 MW\n",
-      "Curtailment Total: 1050.5661 MW\n",
-      "Shed Total: 0.0000 MW\n"
+      "Maior LMP: barra Bus_5 (id=5) = 40000.0000\n",
+      "Menor LMP: barra Bus_1 (id=1) = 0.0000\n"
      ]
     }
    ],
    "source": [
-    "net = IEEE118EOL()\n",
-    "solver = LinearDispatch(net)\n",
+    "b118 = IEEE118Charged()\n",
+    "solver = LinearDispatch(b118)\n",
+    "results = solver.solve_loss()\n",
     "\n",
-    "shed_total_prev = 0\n",
-    "#Aumentar a geração eolica disponivel até que o corte de carga nao mude mais\n",
-    "max_iter = 1000\n",
-    "for i in range(max_iter):\n",
-    "    for wnd_gen in net.wind_generators:\n",
-    "        wnd_gen.p_max_pu = 1.1 * wnd_gen.p_max_pu\n",
-    "    results = solver.solve_loss(verbose=True)\n",
-    "    shed_total = results[\"Resumo\"][\"Total_Shed_MW\"].values[0]\n",
-    "    if abs(shed_total - shed_total_prev) < 1e-3:\n",
-    "        break\n",
-    "    shed_total_prev = shed_total\n"
+    "# Nome (string) da barra com maior e menor LMP\n",
+    "bus_name_max = lmp_series.idxmax()\n",
+    "bus_name_min = lmp_series.idxmin()\n",
+    "\n",
+    "# Valores de LMP\n",
+    "lmp_max = lmp_series.loc[bus_name_max]\n",
+    "lmp_min = lmp_series.loc[bus_name_min]\n",
+    "\n",
+    "# Criar dicionário nome -> id\n",
+    "name_to_id = {b.name: b.id for b in b118.buses}\n",
+    "\n",
+    "b118_id_max = name_to_id[bus_name_max]\n",
+    "b118_id_min = name_to_id[bus_name_min]\n",
+    "\n",
+    "print(f\"Maior LMP: barra {bus_name_max} (id={b118_id_max}) = {lmp_max:.4f}\")\n",
+    "print(f\"Menor LMP: barra {bus_name_min} (id={b118_id_min}) = {lmp_min:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4e62afe",
+   "metadata": {},
+   "source": [
+    "# Alocando Bateria de baixa capacidade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef6960b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bat_b6 = Battery(id=999, bus=b6.buses[b6_id_max-1], p_max_mw=0, p_min_mw=0, capacity_mwh=1)\n",
+    "bat_b118 = Battery(id=999, bus=b118.buses[b118_id_max-1], p_max_mw=0, p_min_mw=0, capacity_mwh=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a8c5869",
+   "metadata": {},
+   "source": [
+    "# Loop de Aumento de capacidade da bateria"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f96a4cc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m net_list = [b6, b118]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m rng=\u001b[43mnp\u001b[49m.random.default_rng(seed=\u001b[32m42\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m net \u001b[38;5;129;01min\u001b[39;00m net_list:\n\u001b[32m      5\u001b[39m     apply_load_scen(net=net, rng=rng)\n",
+      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "net_list = [b6, b118]\n",
+    "hours = 24\n",
+    "rng = np.random.default_rng(seed=42)\n",
+    "battery_scaling = np.linspace(0, 1, 1000)\n",
+    "for net in net_list:\n",
+    "    for actual_scale in battery_scaling:\n",
+    "        net.batteries[0].p_max_mw = net.batteries[0].p_max_mw + actual_scale\n",
+    "        investiment_cost = 5 * actual_scale  # in $k\n",
+    "        #Running 24 hours and collecting operational costs\n",
+    "        for h in range(hours):\n",
+    "            net_h = net.copy()\n",
+    "            apply_load_scen(net=net_h, rng=rng)\n",
+    "            apply_wnd_scen(net=net_h, rng=rng)\n",
+    "            solver = LinearDispatch(net_h)\n",
+    "            results = solver.solve_loss(verbose=False)\n",
+    "            op_cost = results[\"Objective_Value\"]\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
