--- a/trabalhos_transmissao/trab_aula_8/defining_wnd_and_loads.ipynb
+++ b/trabalhos_transmissao/trab_aula_8/defining_wnd_and_loads.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "11558536",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "id": "956bd058",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 27,
    "id": "c078d0c7",
    "metadata": {},
    "outputs": [
@@ -127,13 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "ef6960b5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "bat_b6 = Battery(id=999, bus=b6.buses[b6_id_max-1], p_max_mw=0, p_min_mw=0, capacity_mwh=1)\n",
-    "bat_b118 = Battery(id=999, bus=b118.buses[b118_id_max-1], p_max_mw=0, p_min_mw=0, capacity_mwh=1)"
+    "# Alocando duas baterias, uma na barra de maior LMP e outra na de menor LMP\n",
+    "bat1_b6 = Battery(id=9999, bus=b6.buses[b6_id_max-1], p_max_mw=10000, p_min_mw=10000, capacity_mwh=100000)\n",
+    "bat2_b6 = Battery(id=10000, bus=b6.buses[b6_id_min-1], p_max_mw=10000, p_min_mw=10000, capacity_mwh=100000)\n",
+    "\n",
+    "bat1_b118 = Battery(id=9999, bus=b118.buses[b118_id_max-1], p_max_mw=10000, p_min_mw=10000, capacity_mwh=100000)\n",
+    "bat2_b118 = Battery(id=10000, bus=b118.buses[b118_id_min-1], p_max_mw=10000, p_min_mw=10000, capacity_mwh=100000)"
    ]
   },
   {
@@ -147,41 +151,81 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "16d19118",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to scale a battery\n",
+    "def scale_battery(battery: Battery, scale_factor: float):\n",
+    "    battery.capacity_mwh *= scale_factor\n",
+    "    battery.p_max_mw *= scale_factor\n",
+    "    battery.p_min_mw *= scale_factor\n",
+    "\n",
+    "def investiment_cost(net: Network):\n",
+    "    total_cost = 0\n",
+    "    for battery in net.batteries:\n",
+    "        # Assuming cost is $400 per kWh of capacity\n",
+    "        total_cost += battery.capacity_mwh * 5\n",
+    "    return total_cost\n",
+    "\n",
+    "net = b6\n",
+    "hours = 24\n",
+    "battery_scaling = np.linspace(0, 1, 10)\n",
+    "\n",
+    "# Loop from all scales, but backwards:\n",
+    "total_costs = []\n",
+    "for scale_b1 in battery_scaling[::-1]:\n",
+    "    scale_battery(net.batteries[0], scale_b1)\n",
+    "    for scale_b2 in battery_scaling[::-1]:\n",
+    "        for h in range(hours):\n",
+    "            scale_battery(net.batteries[1], scale_b2)\n",
+    "            apply_wnd_scen(net, rng=np.random.default_rng(seed=42))\n",
+    "            apply_load_scen(net, rng=np.random.default_rng(seed=41))\n",
+    "            solver = LinearDispatch(net)\n",
+    "            results = solver.solve_loss()\n",
+    "            operational_cost = results[\"Objective_Value\"]\n",
+    "            invest_cost = investiment_cost(net)\n",
+    "            total_cost = operational_cost + invest_cost\n",
+    "            print(f\"Scale B1: {scale_b1:.4f}, Scale B2: {scale_b2:.4f} => Total Cost: ${total_cost:,.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f96a4cc9",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
+     "ename": "AttributeError",
+     "evalue": "'B6L8Charged' object has no attribute 'copy'",
      "output_type": "error",
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[44]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m net_list = [b6, b118]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m rng=\u001b[43mnp\u001b[49m.random.default_rng(seed=\u001b[32m42\u001b[39m)\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m net \u001b[38;5;129;01min\u001b[39;00m net_list:\n\u001b[32m      5\u001b[39m     apply_load_scen(net=net, rng=rng)\n",
-      "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[5]\u001b[39m\u001b[32m, line 11\u001b[39m\n\u001b[32m      9\u001b[39m \u001b[38;5;66;03m#Running 24 hours and collecting operational costs\u001b[39;00m\n\u001b[32m     10\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m h \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(hours):\n\u001b[32m---> \u001b[39m\u001b[32m11\u001b[39m     net_h = \u001b[43mnet\u001b[49m\u001b[43m.\u001b[49m\u001b[43mcopy\u001b[49m()\n\u001b[32m     12\u001b[39m     apply_load_scen(net=net_h, rng=rng)\n\u001b[32m     13\u001b[39m     apply_wnd_scen(net=net_h, rng=rng)\n",
+      "\u001b[31mAttributeError\u001b[39m: 'B6L8Charged' object has no attribute 'copy'"
      ]
     }
    ],
    "source": [
-    "net_list = [b6, b118]\n",
+    "# net_list = [b6, b118]\n",
+    "\n",
+    "net = b118\n",
     "hours = 24\n",
     "rng = np.random.default_rng(seed=42)\n",
     "battery_scaling = np.linspace(0, 1, 1000)\n",
-    "for net in net_list:\n",
-    "    for actual_scale in battery_scaling:\n",
-    "        net.batteries[0].p_max_mw = net.batteries[0].p_max_mw + actual_scale\n",
-    "        investiment_cost = 5 * actual_scale  # in $k\n",
-    "        #Running 24 hours and collecting operational costs\n",
-    "        for h in range(hours):\n",
-    "            net_h = net.copy()\n",
-    "            apply_load_scen(net=net_h, rng=rng)\n",
-    "            apply_wnd_scen(net=net_h, rng=rng)\n",
-    "            solver = LinearDispatch(net_h)\n",
-    "            results = solver.solve_loss(verbose=False)\n",
-    "            op_cost = results[\"Objective_Value\"]\n",
-    "\n",
-    "\n",
-    "\n"
+    "# for net in net_list:\n",
+    "for actual_scale in battery_scaling:\n",
+    "    net.batteries[0].p_max_mw = net.batteries[0].p_max_mw + actual_scale\n",
+    "    investiment_cost = 5 * actual_scale  # in $k\n",
+    "    #Running 24 hours and collecting operational costs\n",
+    "    for h in range(hours):\n",
+    "        net_h = net.copy()\n",
+    "        apply_load_scen(net=net_h, rng=rng)\n",
+    "        apply_wnd_scen(net=net_h, rng=rng)\n",
+    "        solver = LinearDispatch(net_h)\n",
+    "        results = solver.solve_loss(verbose=False)\n",
+    "        op_cost = results[\"Objective_Value\"]"
    ]
   }
  ],
