--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "36a50fdb",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "id": "f1c90e75",
    "metadata": {},
    "outputs": [
@@ -28,14 +28,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FOB: 31920.0000\n",
       "Solução encontrada após 1 iterações.\n",
       "Perdas Totais do Sistema: 0.0000 MW\n",
       "Curtailment Total: 0.0000 MW\n",
       "Shed Total: 0.0000 MW\n",
-      "           P_Out_MW  P_In_MW  ...  Dual_Lower_SOC  Dual_Upper_SOC\n",
-      "Battery_1      80.0      0.0  ...             0.0             0.0\n",
+      "           P_Out_MW  P_In_MW  Initial_SOC_MWh  Final_SOC_MWh  Dual_Lower_Out  \\\n",
+      "Battery_1      80.0      0.0            100.0           20.0             0.0   \n",
       "\n",
-      "[1 rows x 10 columns]\n"
+      "           Dual_Upper_Out  Dual_Lower_In  Dual_Upper_In  Dual_Lower_SOC  \\\n",
+      "Battery_1             0.0        39900.0            0.0             0.0   \n",
+      "\n",
+      "           Dual_Upper_SOC  \n",
+      "Battery_1             0.0  \n"
      ]
     }
    ],
@@ -55,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "a69ca99f",
    "metadata": {},
    "outputs": [
@@ -63,14 +68,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FOB: -8.0000\n",
       "Solução encontrada após 1 iterações.\n",
       "Perdas Totais do Sistema: 0.0000 MW\n",
       "Curtailment Total: 0.0000 MW\n",
       "Shed Total: 0.0000 MW\n",
-      "           P_Out_MW  P_In_MW  ...  Dual_Lower_SOC  Dual_Upper_SOC\n",
-      "Battery_1       0.0     80.0  ...             0.0           -10.0\n",
+      "           P_Out_MW  P_In_MW  Initial_SOC_MWh  Final_SOC_MWh  Dual_Lower_Out  \\\n",
+      "Battery_1       0.0     80.0             20.0          100.0         39900.0   \n",
       "\n",
-      "[1 rows x 10 columns]\n"
+      "           Dual_Upper_Out  Dual_Lower_In  Dual_Upper_In  Dual_Lower_SOC  \\\n",
+      "Battery_1             0.0            0.0            0.0             0.0   \n",
+      "\n",
+      "           Dual_Upper_SOC  \n",
+      "Battery_1           -10.0  \n"
      ]
     }
    ],
@@ -90,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 5,
    "id": "8c70bbca",
    "metadata": {},
    "outputs": [
@@ -98,19 +108,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "FOB: 16000.0000\n",
       "Solução encontrada após 1 iterações.\n",
       "Perdas Totais do Sistema: 0.0000 MW\n",
       "Curtailment Total: 90.0000 MW\n",
       "Shed Total: 40.0000 MW\n",
-      "           P_Out_MW  P_In_MW  ...  Dual_Lower_SOC  Dual_Upper_SOC\n",
-      "Battery_1       0.0      0.0  ...             0.0             0.0\n",
+      "           P_Out_MW  P_In_MW  Initial_SOC_MWh  Final_SOC_MWh  Dual_Lower_Out  \\\n",
+      "Battery_1       0.0      0.0             50.0           50.0         19900.0   \n",
       "\n",
-      "[1 rows x 10 columns]\n"
+      "           Dual_Upper_Out  Dual_Lower_In  Dual_Upper_In  Dual_Lower_SOC  \\\n",
+      "Battery_1             0.0        19900.0            0.0             0.0   \n",
+      "\n",
+      "           Dual_Upper_SOC  \n",
+      "Battery_1             0.0  \n"
      ]
     }
    ],
    "source": [
-    "# Sistema Bateria e Eolico \n",
+    "# Sistema Bateria Carga e Eolico com curtailment \n",
     "net = Network(sb_mva=100)\n",
     "bus1 = Bus(net, id=1, name=\"Bus 1\")\n",
     "bus2 = Bus(net, id=2, name=\"Bus 2\")\n",
@@ -121,7 +136,7 @@
     "line3 = Line(id=3, from_bus=bus1, to_bus=bus3, x_pu=0.1, flow_max_pu=0.4)\n",
     "\n",
     "wnd = WindGenerator(id=1, bus=bus1, p_max_mw=150)\n",
-    "bat = Battery(id=1, bus=bus2, p_max_mw=90, p_min_mw=-100, capacity_mwh=100, soc_mwh=50, cost_charge_mw=-1, cost_discharge_mw=399)\n",
+    "bat = Battery(id=1, bus=bus2, p_max_mw=90, p_min_mw=-40, capacity_mwh=100, soc_mwh=50, cost_charge_mw=-1, cost_discharge_mw=399)\n",
     "load = Load(id=1, bus=bus3, p_mw=100, cost_shed_mw=400)\n",
     "\n",
     "solver = LinearDispatch(net=net)\n",
