PNL quase terminado

--- a/trabalhos_transmissao/trab_aula_8/TRAB_8_E_PROVA.ipynb
+++ b/trabalhos_transmissao/trab_aula_8/TRAB_8_E_PROVA.ipynb
@@ -65,13 +65,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\gabriel.halfeld\\AppData\\Local\\Temp\\ipykernel_32832\\2136802245.py:12: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\gabri\\AppData\\Local\\Temp\\ipykernel_49888\\2136802245.py:12: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(f\"Energia Armazenada: {[float(results['Battery']['P_In_MW'][i]) for i in range(len(net.batteries))]}\")\n",
-      "C:\\Users\\gabriel.halfeld\\AppData\\Local\\Temp\\ipykernel_32832\\2136802245.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\gabri\\AppData\\Local\\Temp\\ipykernel_49888\\2136802245.py:13: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(f\"Energia Fornecida: {[float(results['Battery']['P_Out_MW'][i]) for i in range(len(net.batteries))]}\")\n",
-      "C:\\Users\\gabriel.halfeld\\AppData\\Local\\Temp\\ipykernel_32832\\2136802245.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\gabri\\AppData\\Local\\Temp\\ipykernel_49888\\2136802245.py:14: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(f\"Corte de Carga: {[float(results['Load_Shed']['P_Shed_MW'][i]) for i in range(len(net.loads))]}\")\n",
-      "C:\\Users\\gabriel.halfeld\\AppData\\Local\\Temp\\ipykernel_32832\\2136802245.py:15: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\gabri\\AppData\\Local\\Temp\\ipykernel_49888\\2136802245.py:15: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  print(f\"Fluxo nas Linhas: {[float(results['Line']['Flow_MW'][i]) for i in range(len(net.lines))]}\")\n"
      ]
     }
@@ -1161,7 +1161,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tastee-aula-2-Kog78Irf-py3.12",
+   "display_name": "tastee-wpX4E7rG-py3.12",
    "language": "python",
    "name": "python3"
   },
@@ -1175,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
